--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^8.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
     "sort-by": "^1.2.0",
