--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "aos": "^2.3.4",
     "daisyui": "^5.1.10",
     "localforage": "^1.10.0",
     "lucide-react": "^0.544.0",
