--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
+    "react-swiper": "^0.1.5",
     "sort-by": "^1.2.0",
+    "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
