--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "aos": "^2.3.4",
+    "axios": "^1.12.2",
     "daisyui": "^5.1.10",
     "firebase": "^12.2.1",
     "leaflet": "^1.9.4",
