--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.89.0",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "daisyui": "^5.1.10",
