--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "daisyui": "^5.1.10",
+    "date-fns": "^4.1.0",
     "firebase": "^12.2.1",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
