--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
     "react-swiper": "^0.1.5",
+    "recharts": "^3.2.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.23.0",
     "swiper": "^12.0.1",
